# relmchef

./: Cargo.toml  README.md  chef.db
src/: main.rs
src/chef/: app.rs  mod.rs  models.rs
src/chef/app/: cuisine.rs
src/chef/components/: food_page.rs  header.rs  mod.rs  product_page.rs  recipe_page.rs
src/chef/components/food_page/: food_form.rs  food_list.rs
src/chef/components/food_page/food_list/: food_row.rs
src/chef/components/product_page/: product_form.rs  product_list.rs  recipe_portion_form.rs  recipe_portion_list.rs
src/chef/components/product_page/product_list/: product_row.rs
src/chef/components/product_page/recipe_portion_list/: recipe_portion_row.rs
src/chef/components/recipe_page/: chef.db  food_portion_form.rs  food_portion_list.rs  portion_form.rs  portion_list.rs  recipe_form.rs  recipe_info.rs  recipe_list.rs
src/chef/components/recipe_page/food_portion_list/: chef.db  food_portion_row.rs
src/chef/components/recipe_page/portion_list/: portion_row.rs
src/chef/components/recipe_page/recipe_list/: recipe_row.rs
surreal/: 000013.sst  IDENTITY  MANIFEST-000010
