[package]
name = "relmchef"
version = "0.1.0"
edition = "2021"

[dependencies]
libadwaita = "0.6.0"
once_cell = "1.19.0"
relm4 = { version = "0.8.1", features = ["libadwaita", "gnome_46"] }
relm4-components = { version = "0.8.1", features = ["libadwaita"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
